# PSO

./: .gitignore  CLAUDE.md  CMakeLists.txt  PLAN.md  README.md  clangd_setup.md
docs/: exceptions.md  polymorphism.md  pso_mathematics_guide.md  pso_reference.md  random_generator_implementation.md
include/: pso_types.h  random_generator.h
source/: main.cpp  random_generator.cpp
tests/: random_generator_test.cpp  sample_test.cpp
